# SJarvish

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/agents/: graph.py  state.py  supervisor.py
backend/agents/nodes/: workers.py
backend/api/: main.py
backend/core/: config.py
backend/core/security/: __init__.py  auth.py  encryption.py
backend/llm/litellm_router/: router.py
backend/memory/: __init__.py  db_manager.py  service.py
backend/tools/: browser_control.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
infrastructure/docker/: docker-compose.yml
