[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ai-os-backend"
version = "0.1.0"
description = "FastAPI/LangGraph backend for AI Operating System"
requires-python = ">=3.10"
authors = [{name = "AI OS Team"}]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
langgraph = "^0.0.1"
langchain = "^0.1.0"
litellm = "^1.0"
chromadb = "^0.4.0"
redis = "^5.0"
sqlalchemy = "^2.0"
httpx = "^0.25.0"
websockets = "^12.0"
prometheus-client = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
